ticketing/infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
## refers to the deployment name
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  ## first step to find the pods that the deployments create, usually the name of the file minus -depl part
  selector:
    matchLabels:
      app: auth-mongo
  ## second step to tell how to create the pod - should match the selector above
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - name: auth-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
